<resources>
    <string name="app_name">Melting Weather</string>
    <string name="meteo">Meteo Vercelli</string>
    <string name="crediti">Crediti</string>
    <string name="secondTitle">MeltingSoft\'s Weather (statico)</string>
    <string name="test1">12 °C</string>
    <string name="humidity">Umidità</string>
    <string name="test2">70%</string>
    <string name="pressure">Pressione</string>
    <string name="test3">99KPa</string>
    <string name="temperature">Temperatura</string>
    <string name="firstTitle">MeltingSoft\nWeather Station</string>
    <string name="logo">Logo</string>
    <string name="scopo">Scopo</string>
    <string name="txtCrediti">Quest\'app è stata creata come supporto al progetto riguardante la realizzazione di una Stazione Meteo tramite Arduino, per mostrare i dati rilevati dai sensori di Temperatura, Umidità e Pressione.</string>
    <string name="creatori">Creatori App</string>
    <string name="copyright">Siano Vincenzo\nAlfano Roberto\nPozzi Cristian</string>
    <string name="settore">Settore Marketing</string>
    <string name="azienda">MeltingSoft</string>
</resources>
